<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.libRecipe.ui.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activites.LoginActivity">

        <!-- Progress Indicator -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="127dp"
            android:layout_height="182dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/ic_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Email Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:onTextChanged="@{viewmodel::onEmailChanged}"
                android:paddingStart="10dp"
                android:text="@={viewmodel.email}"
                android:textColor="@color/md_theme_dark_scrim"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:onTextChanged="@{viewmodel::onPasswordChanged}"
                android:paddingStart="10dp"
                android:text="@={viewmodel.password}"
                android:textColor="@color/md_theme_dark_background"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_continue"
            style="@style/ButtonStyle"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_background"
            android:enabled="@{viewmodel.btnSelected}"
            android:onClick="@{()->viewmodel.login()}"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
