<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favoriteRecipesRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    tools:context=".activites.FavoriteActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favoriteRowCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/strokeColor"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardBackgroundColor">

            <ImageView
                android:id="@+id/favorite_recipe_imageView"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/favorite_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/titleColor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/favorite_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/favorite_recipe_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favorite_description_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/descriptionColor"
                android:text="@string/favorite_description"
                app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
                app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
                app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView" />

            <ImageView
                android:id="@+id/favorite_heart_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorite_clock_imageView"
                app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                app:srcCompat="@drawable/ic_heart"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/favorite_clock_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorite_leaf_imageView"
                app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/yellow" />

            <ImageView
                android:id="@+id/favorite_leaf_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/favorite_leaf"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                app:srcCompat="@drawable/ic_leaf"
                app:tint="@color/green" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
